# automation-scaffold

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
01-ai-table/: README.md  ai_processor.py  main.py  pyproject.toml  pytest.ini  table_ops.py  watcher.py
01-ai-table/tests/: test_ai_processor.py  test_table_ops.py  test_watcher.py
02-rpa/: README.md  pyproject.toml
02-rpa/processors/: base.py  report_export.py  web_scraper.py
02-rpa/scripts/: process_csv.py
02-rpa/tests/: test_encrypt.py  test_processors.py
02-rpa/utils/: encrypt.py
03-data-scraper/: README.md  app.py  config.py  pyproject.toml
03-data-scraper/cleaners/: normalizer.py
03-data-scraper/routers/: api_source.py  csv_source.py  db_source.py  web_scraper.py
03-data-scraper/tests/: conftest.py  test_normalizer.py
03-data-scraper/writers/: db_writer.py  table_writer.py
04-agent/: README.md  app.py  config.py  pyproject.toml  pytest.ini
04-agent/graph/: router.py  workflow.py
04-agent/openclaw/: bot.py  callback.py  router.py  skills.py
04-agent/tests/: conftest.py  test_openclaw.py  test_router.py
04-agent/tools/: bailian_tool.py  rpa_tool.py  scrape_tool.py  table_tool.py  web_search_tool.py
docs/superpowers/plans/: 2026-04-25-automation-scaffold.md
docs/superpowers/specs/: 2026-04-25-automation-scaffold-design.md
shared/: README.md  pyproject.toml
shared/config/: settings.py
shared/tests/: test_bailian.py  test_dingtalk.py  test_feishu.py  test_logger.py  test_settings.py
shared/utils/: bailian.py  dingtalk.py  feishu.py  logger.py
