[project]
name = "03-data-scraper"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]",
    "httpx>=0.27",
    "pandas>=2.0",
    "sqlalchemy>=2.0",
    "beautifulsoup4",
    "fake-useragent",
    "python-multipart",
    "pydantic-settings>=2.0",
    "shared",
]
